--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ details_store
 .zcompdump-Surya\342\200\231s MacBook Pro-5.9
 nvim/plugged
 nvim/pack
+/Users/suryajillellamudi/configfiles/.zcompdump-Surya’s MacBook Pro-5.9
